feat: JWT verification
